data/derived/sp14/progs/unify/prog0257.ml.out
Characters 71-113:
  | h::t -> ((List.rev (List.map (fun x->x*10) t ) ) ) + h*i;;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
